--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,13 @@
     "license": "MIT",
     "require": {
         "php": ">=7.2",
+        "ext-json": "*",
+        "cakephp/authentication": "^2.10",
         "cakephp/cakephp": "^4.3",
+        "cakephp/console": "*",
         "cakephp/migrations": "^3.2",
         "cakephp/plugin-installer": "^1.3",
-        "mobiledetect/mobiledetectlib": "^2.8",
-      "ext-json": "*"
+        "mobiledetect/mobiledetectlib": "^2.8"
     },
     "require-dev": {
         "cakephp/bake": "^2.6",
